clusters/dev/misc/cms-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fdk-cms-service
  namespace: staging
  annotations:
    nginx.ingress.kubernetes.io/limit-rps: "10"
    nginx.ingress.kubernetes.io/limit-burst-multiplier: "2"
    nginx.ingress.kubernetes.io/limit-whitelist: "10.0.0.0/8,35.228.50.2/32"
    nginx.ingress.kubernetes.io/server-snippet: |
      server_tokens off;
      location ~ ^/(ping|ready|prometheus) {
        deny all;
        return 404;
      }
      location / {
        proxy_set_header X-Forwarded-Proto https;
        proxy_set_header X-Forwarded-For $remote_addr;
        proxy_set_header X-Forwarded-Host $host;
      }
spec:
  ingressClassName: nginx
  rules:
    - host: cms.staging.fellesdatakatalog.digdir.no
      http:
        paths:
          - backend:
              service:
                name: fdk-cms-service
                port:
                  number: 8080
            path: /
            pathType: Prefix
